--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -2,8 +2,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap");
 $fontsource: 'Source Serif Pro', serif;
 $fontroboto:'Roboto', sans-serif;
-$colorprincipal: #2c0808;
-$colorsecundario: rgb(152, 178, 189);
+$colorprincipal: rgb(33, 37, 41);
+$colorsecundario: rgb(117, 179, 206);
 $colorterciario: rgb(255, 255, 255);
 $colorcuarto: rgba(19, 18, 18, 0.897);
 $colorquinto: rgb(21, 124, 165);
+$colorsexto: rgb(7, 243, 184);
+$colorseptimo:rgb(128, 128, 128)
