--- a/scss/_main.scss
+++ b/scss/_main.scss
@@ -39,103 +39,448 @@
     background-color: $colorsecundario;
 }
 
-.df-main{
-    background-color: $colorsecundario;
+.banner{
+    background-image: linear-gradient(100deg, #000000, #00000020),url(../img/razer.jpg);
+    height: 60rem;
     background-size: cover;
-    padding: 5%;
-    
-.productos{
-    display: flex;
-    color: $colorcuarto;
-    font-weight: 700;
-    font-size: 50px;
+    background-position: center;
+}
+.content-banner{
+    max-width: 90rem;
+    margin: 0 auto;
+    padding: 25rem 0;
+}
+.content-banner p{
+    color: $colorterciario;
+    font-size: 1.2rem;
+    margin-bottom: 1rem;
+    font-weight: 500;
+}
+.content-banner h2{
+    color: $colorterciario;
+    font-size: 3.5 rem;
+    font-weight: 500;
+    line-height: 1.2;
+}
+.content-banner a{
+    margin-top: 2rem;
+    text-decoration: none;
+    color: $colorterciario;
+    background-color:$colorsecundario;
+    display: inline-block;
+    padding: 1rem 3rem;
+    text-decoration: uppercase;
+    border-radius: 10rem;
+}
+
+/*main content*/
+.heading-1{
     text-align: center;
-    justify-content: center;
-    font-family: $fontroboto;
-    margin: 0;
-    padding: 10px;
-    }
-}
-
-
-.container {
-    display: grid; 
-    grid-template-columns: 1fr 1fr; 
-    grid-auto-rows: 500px;
-    gap: 10px 10px;
-    padding: 20px;
-    grid-template-areas: 
-  ". ."
-  ". ."; 
-}
-
-.container-imagenes{
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    border-radius: 20px;
-    box-shadow: 5px 8px 12px;
-}
-
-.container-caja{
-    display: flex;
-    position: relative;
-}
-.container-titulo{
-   text-align: center;
-   position: absolute;
-   bottom: 0;
-   color:$colorterciario;
-   flex-direction: column;
-   justify-content: center;
-   align-items: center;
-   top: 50%;
-   left: 40%;
-   font-size: 3rem;
-   font-family: $fontroboto;
-   font-weight: 700;
-  }
-
-.expo-prod{
-    display: flex;
-    flex-direction: column;
-    margin: 0px;
-    padding: 15px;
-}
-
-  .expo-img{
-    margin: 0;
-    padding: 0px;
-    width: 50%;
-    height: 50%;
-    object-fit: cover;
-    border-radius: 5%;
-    position: relative;
-
-
-
-}
-
-   .expo-titulo{
-    display: flex;
-    text-align: justify;
-    position: absolute;
-    bottom: 70%;
-    color:$colorterciario;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    top: 5%;
-    left: 55%;
+    font-weight: 500;
     font-size: 3rem;
-    font-family: $fontroboto;
-    font-weight: 700;
 }
 
-.text{
-    font-size: 25px;
-    text-align: center;
+.main-content{
+    background-color: rgba(219, 106, 40, 0.308); 
+
+      }
+
+/*caracteristicas*/
+
+
+.container-features{
+    display: grid;
+     grid-template-columns: 1fr 1fr 1fr 1fr;
+     gap: 3rem;
+}
+.card-feature {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	gap: 1.5rem;
+
+	background-color: $colorterciario;
+	border-radius: 1rem;
+	padding: 1rem 0;
+    margin: 1rem 0;
+}
+.card-feature i {
+	font-size: 2rem;
+	color: $colorprincipal;
+}
+.feature-content{
+    display: flex;
+    flex-direction: column;
+    gap: 0.5;
+}
+.feature-content span{
+    font-weight: 700;
+    font-size: 1.2rem;
+    color: $colorcuarto;
+}
+.feature-content p{
+    color: $colorcuarto;
+    font-weight: 500;
+}
+
+/*categorias*/
+
+.top-categorias{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 3rem;
+}
+.container-categorias{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 3rem;
+}
+.card-categorias{
+    height: 20rem;
+    display: flex;
+    flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border-radius: 2rem;
+    gap: 2rem;
+}
+
+.categorias-celulares{
+    background-image: linear-gradient(#00000080,#00000080),url(../img/iphone14.jpg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+.categorias-notebooks{
+    background-image: linear-gradient(#00000080,#00000080),url(../img/macbook-pro.jpeg);
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+
+}
+.categorias-gaming{
+    background-image: linear-gradient(#00000080,#00000080),url(../img/teclado-rayzer.jpeg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+
+}
+.categorias-perifericos{
+    background-image: linear-gradient(#00000020,#00000020),url(../img/auriculares.jpg);
+    background-size: cover;
+    background-position: bottom;
+    background-repeat: no-repeat;
+
+}
+.card-categorias p{
+    font-size: 2.5rem;
+    color: $colorterciario;
+    text-transform: capitalize;
+    position: relative;
+}
+.card-categorias p::after{
+    content: '';
+    width: 2.5rem;
+    height: 2px;
+    background-color: $colorterciario;
+    position: absolute;
+    bottom: -1rem;
+    left: 50%;
+    transform: translate(-50%,50%);
+
+}
+.card-categorias span{
+    font-size: 1.5rem;
+    color: $colorterciario;
+    cursor: pointer;
+}
+ .card-categorias span:hover{
+    color:$colorsexto
+ }
+
+ /***** top productos***/
+
+ .top-productos{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    margin-bottom: 2rem;
+ }
+ .container-opciones{
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    margin-bottom: 2rem;
+ }
+ .container-opciones span{
+    color: $colorprincipal;
+    background-color: $colorterciario;
+    padding: .7rem 3rem;
+    font-size: 1.4rem;
+    text-transform: capitalize;
+    border-radius: 2rem;
+    cursor: pointer;
+ }
+ .container-opciones span:hover{
+    background-color:$colorseptimo;
+ }
+ .container-opciones span.active{
+    background-color: $colorseptimo;
+ }
+
+ /*** productos****/
+ .container-productos{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(20rem,1fr));
+    gap: 3rem;
+ }
+ .card-productos{
+    background-color: $colorterciario;
+    padding: 2rem 3rem;
+    border-radius: 0.5rem;
+    cursor: pointer;
+ }
+ .container-img{
+    position: relative;
+ }
+ .container-img img{
+    width: 100%;
+ }
+ .container-img .discount{
+    position: absolute;
+    left: 0;
+    background-color: $colorprincipal;
+    color: $colorterciario;
+    padding: 2px 1.2rem;
+    border-radius: 1rem;
+    font-size: 1.2rem;
+ }
+
+ .card-productos:hover .discount{
+    background-color:$colorquinto;
+ }
+ .button-group{
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    position: absolute;
+    top: 0;
+    right: -3rem;
+    z-index: -1;
+    transition: all .4s ease;
+}
+
+.button-group span{
+    border: 1px solid $colorprincipal;
+    padding: .8rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .4s ease;
+}
+.button-group span:hover{
+    background-color: $colorquinto;
+}
+.button-group span:hover i{
+color: $colorterciario;
+}
+.button-group span i{
+    font-size: 1.5rem;
+    color: $colorprincipal;
+}
+.card-productos:hover .button-group{
+    z-index: 0;
+    right: -1rem;
+}
+ .content-card-producto{
+    display: grid;
+    justify-items: center;
+    grid-template-columns: 1fr 1fr;
+    grid-template-rows: repeat(4,min-content);
+    row-gap: 1rem;
+ }
+ .stars{
+    grid-row: 1/2;
+    grid-column: 1/-1;
+ }
+ .stars i{
+    font-size: 1.3rem;
+    color: $colorprincipal;
+ }
+ .content-card-producto h3{
+    grid-row: 2/3;
+    grid-column: 1/-1;
     font-weight: 400;
+    font-size: 1.6rem;
+    margin-bottom: 1rem;
+    cursor: pointer;
+ }
+ .content-card-producto h3:hover{
+    color: $colorsexto
+ }
+ .add-cart{
+    justify-self: start;
+    border: 2px solid $colorprincipal;
+    padding: 1rem;
+    border-radius: 50%;
+    cursor: pointer;
+    transition: all .4s ease;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ }
+ .add-cart:hover{
+    background-color: rgba(131, 48, 0, 0.308);
+ }
+
+ .add-cart i{
+    font-size: 1.5rem;
+    color: $colorquinto;
+ }
+.add-cart:hover i{
+    color: $colorterciario;
+}
+.content-card-producto .prince{
+    justify-self: end;
+    align-self: center;
+    font-size: 1.7rem;
+    font-weight: 600;;
+}
+
+.content-card-producto .price span{
+    font-size: 1rem;
+    font-weight: 400;
+    text-decoration: line-through;
+    color: $colorseptimo;
+    margin-left: .5rem;
+}
+
+.m-main{
     font-family: $fontroboto;
+}
+
+.contacto{
+    position: relative;
+    min-height: 100vh;
+    padding: 50px 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    background-image: url(../img/puente.jpg);
+    background-size: cover;
+}
+.contacto .contenido{
+    max-width: 800px;
+    text-align: center;
+}
+.contacto .contenido h2{
+    font-size: 40px;
+    font-weight: 700;
+    color: $colorterciario;
+}
+.contacto .contenido p{
+    font-weight: 500;
+    color: $colorterciario;
+}
+
+.contenedor{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 30px;
+}
+.contenedor .contactinfo{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+}
+.contenedor .contactinfo .box{
+    position: relative;
+    padding: 20px 0;
+    display: flex;
+}
+.contenedor .contactinfo .box .icon{
+    min-width: 60px;
+    height: 60px;
+    background-color: $colorterciario;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 50%;
+    font-size: 20px;
+}
+.contenedor .contactinfo .box .text{
+    display: flex;
+    margin-left: 30px;
+    font-size: 20px;
+    color: $colorterciario;
+    flex-direction: column;
+    font-weight: 300px;
+}
+
+.contenedor .contactinfo .box .text h3{
+    font-weight: 700;
+    color:$colorsexto;
+}
+
+.contactform{
+    width: 40%;
+    padding: 40px;
+    background-color: $colorterciario;
+}
+.contactform h2{
+    font-size: 40px;
+    color: $colorcuarto;
+    font-weight: 600;
+}
+
+.contactform .inputbox{
+    position: relative;
+    width: 100%;
+    margin-top: 10px;
+}
+.contactform .inputbox input,
+.contactform .inputbox textarea{
+    width: 100%;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    border: none;
+    border-bottom: 2px solid $colorcuarto;
+    outline: none;
+    resize: none;
+}
+.contactform .inputbox span{
+    position: absolute;
+    left: 0;
+    padding: 5px 0;
+    font-size: 16px;
+    margin: 10px 0;
+    pointer-events: none;
+    transition: 0.5s;
+    color: $colorcuarto;
+}
+
+.contactform .inputbox input:focus ~ span,
+.contactform .inputbox input:valid ~ span,
+.contactform .inputbox textarea:focus ~ span,
+.contactform .inputbox textarea:valid span{
+    color: $colorsexto;
+    font-size: 12px;
+    transform: translateY(-20px);
+}
+.contactform .inputbox input[type="submit"]{
+    width: 100px;
+    background-color: $colorquinto;
+    color: $colorterciario;
+    border: none;
+    cursor: pointer;
+    padding: 10px;
+    font-size: 18px;
 }
